traits3/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check)
error[E0601]: `main` function not found in crate `format_check`
  --> src/main.rs:42:2
   |
42 | }
   |  ^ consider adding a `main` function to `src/main.rs`

error[E0046]: not all trait items implemented, missing: `licensing_info`
  --> src/main.rs:25:1
   |
14 |     fn licensing_info(&self) -> String;
   |     ----------------------------------- `licensing_info` from trait
...
25 | impl Licensed for SomeSoftware {} // Don't edit this line
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `licensing_info` in implementation

error[E0046]: not all trait items implemented, missing: `licensing_info`
  --> src/main.rs:26:1
   |
14 |     fn licensing_info(&self) -> String;
   |     ----------------------------------- `licensing_info` from trait
...
26 | impl Licensed for OtherSoftware {} // Don't edit this line
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `licensing_info` in implementation

Some errors have detailed explanations: E0046, E0601.
For more information about an error, try `rustc --explain E0046`.
error: could not compile `format_check` (bin "format_check") due to 3 previous errors

[!] Source code format check: FAILED
